Removed bad links

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="container-fluid bg-blue">
           <!-- Navbar brand -->
           <a class="navbar-brand nav-link" target="_blank"
-            href="https://mdbootstrap.com/docs/standard/">
-            <strong>Office of the Nagorno Karabakh Republic</strong>
+            href="#">
+            <strong class="text-nowrap">Office of the Nagorno Karabakh Republic</strong>
           </a>
           <button class="navbar-toggler" type="button"
             data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
