added page template

--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="assets/css/custom.css" />
   </head>
-  <body>
+  <body lang="en">
     <!--Main Navigation-->
     <header>
-      <style>
-
-      </style>
 
       <!-- Navbar -->
       <!-- nav class removed "d-none d-lg-block", with the @media min-width value at 992px-->
@@ -31,9 +28,10 @@
         style="z-index: 2000;">
         <div class="container-fluid bg-blue">
           <!-- Navbar brand -->
-          <a class="navbar-brand nav-link" target="_blank"
+          <a class="navbar-brand nav-link"
             href="#">
-            <strong class="text-nowrap">Office of the Nagorno Karabakh Republic</strong>
+            <span class="d-none d-sm-block"><strong><p class="d-inline"
+                  lang="en">Office of the Nagorno Karabakh Republic</p></strong></span>
           </a>
           <button class="navbar-toggler" type="button"
             data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
@@ -43,8 +41,37 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarExample01">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item active">
+              <!-- <li class="nav-item active">
                 <a class="nav-link" aria-current="page" href="#intro">Home</a>
+              </li> -->
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdownMenuLink"
+                  role="button"
+                  data-mdb-toggle="dropdown"
+                  aria-expanded="false">
+                  Our Office
+                </a>
+                <ul class="dropdown-menu"
+                  aria-labelledby="navbarDropdownMenuLink">
+                  <li>
+                    <a class="dropdown-item" href="#">Ambassador</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Structure</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Contact Hours</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Gallery</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Building</a>
+                  </li>
+                </ul>
               </li>
               <!-- Dropdown -->
               <li class="nav-item dropdown">
@@ -180,11 +207,11 @@
         <div class="carousel-inner">
           <!-- Single item -->
           <div class="carousel-item active">
-            <!--<div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-              <div class="d-flex justify-content-center align-items-center h-100">
-                <div class="text-white text-center">
-                  <h1 class="mb-3">Learn Bootstrap 5 with MDB</h1>
-                  <h5 class="mb-4">Best & free guide of responsive web design</h5>
+            <div class="mask" style="background-color: rgba(0, 0, 0, 0.0);">
+              <div class="d-flex justify-content-center h-100 ">
+                <div class="text-white text-center d-block d-sm-none">
+                  <h3 class="mt-3 position-absolute top-0 start-50 translate-middle-x text-nowrap">Office of the Nagorno Karabakh Republic</h1>
+                  <!--<h5 class="mb-4">Best & free guide of responsive web design</h5>
                   <a
                     class="btn btn-outline-light btn-lg m-2"
                     href="https://www.youtube.com/watch?v=c9B4TPnak1A"
@@ -199,10 +226,10 @@
                     target="_blank"
                     role="button"
                     >Download MDB UI KIT</a
-                  >
+                  >-->
                 </div>
               </div>
-            </div> -->
+            </div> 
           </div>
 
 
@@ -284,8 +311,14 @@
                       </a>
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Republic of Artsakh FM meets with Heads of the Parliamentary Factions</h5>
-                      <p class="card-text">On April 26, a meeting was held between Minister Babayan and members of parliament. A wide range of issues related to the recent regional developments, the settlement of the Azerbaijani-Karabagh conflict and the foreign policy of Artsakh were discussed.
+                      <h5 class="card-title">Republic of Artsakh FM meets with
+                        Heads of the Parliamentary Factions</h5>
+                      <p class="card-text">On April 26, a meeting was held
+                        between Minister Babayan and members of parliament. A
+                        wide range of issues related to the recent regional
+                        developments, the settlement of the Azerbaijani-Karabagh
+                        conflict and the foreign policy of Artsakh were
+                        discussed.
                       </p>
                       <a href="#!" class="btn btn-primary d-none">Button</a>
                     </div>
@@ -306,8 +339,13 @@
                       </a>
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Foreign Ministers of Repubic of Artsakh and PMR Hold Discussions</h5>
-                      <p class="card-text">Minister Babayan condemned the terrorist attacks on a number of PMR state structures committed the day before, expressing solidarity with the fraternal Pridnestrovian people on behalf of the authorities and people of Artsakh.
+                      <h5 class="card-title">Foreign Ministers of Repubic of
+                        Artsakh and PMR Hold Discussions</h5>
+                      <p class="card-text">Minister Babayan condemned the
+                        terrorist attacks on a number of PMR state structures
+                        committed the day before, expressing solidarity with the
+                        fraternal Pridnestrovian people on behalf of the
+                        authorities and people of Artsakh.
                       </p>
                       <a href="#!" class="btn btn-primary d-none">Button</a>
                     </div>
@@ -322,14 +360,19 @@
                         src="assets/img/news_3_mfa-01.jpeg"
                         class="img-fluid"
                         />
-                      <a href="#!">
+                      <a href="post/1/">
                         <div class="mask" style="background-color: rgba(251,
                           251, 251, 0.15);"></div>
                       </a>
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Republic of Artsakh Foreign Minister Meets with Students of the Diplomatic School of the Foreign Ministry of Armenia</h5>
-                      <p class="card-text">Issues related to global and regional processes, the Azerbaijani-Karabakh conflict, the foreign policy of the two Armenian Republics and a range of other topics were discussed during the meeting.
+                      <h5 class="card-title">Republic of Artsakh Foreign
+                        Minister Meets with Students of the Diplomatic School of
+                        the Foreign Ministry of Armenia</h5>
+                      <p class="card-text">Issues related to global and regional
+                        processes, the Azerbaijani-Karabakh conflict, the
+                        foreign policy of the two Armenian Republics and a range
+                        of other topics were discussed during the meeting.
                       </p>
                       <a href="#!" class="btn btn-primary d-none">Button</a>
                     </div>
@@ -345,7 +388,8 @@
             <section>
               <div class="row">
                 <div class="col-md-6 gx-5 mb-4">
-                  <div class="bg-image hover-overlay ripple shadow-2-strong mt-3"
+                  <div class="bg-image hover-overlay ripple shadow-2-strong
+                    mt-3"
                     data-mdb-ripple-color="light">
                     <img src="assets/img/pillars.png"
                       class="img-fluid" />
@@ -367,7 +411,8 @@
 
                     <dt class="col-sm-3">Address</dt>
                     <dd class="col-sm-9">17a/2 Nairi Zarian Street, </dd>
-                    <dd class="col-sm-9 offset-sm-3 mt-n2">Yerevan, Republic of Armenia 0051</dd>
+                    <dd class="col-sm-9 offset-sm-3 mt-n2">Yerevan, Republic of
+                      Armenia 0051</dd>
 
                     <dt class="col-sm-3">Telephone</dt>
                     <dd class="col-sm-9">+374 10 24 99 28</dd>
@@ -520,58 +565,63 @@
               Download MDB UI KIT
             </a>
           </div>-->
+        <hr class="m-0" />
 
-          <hr class="m-0" />
+        <div class="text-center py-4 align-items-center">
+          <p>Follow us on social media</p>
+          <a
+            href="#"
+            class="btn btn-primary m-1"
+            role="button"
+            rel="nofollow"
+            target="_blank">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a
+            href="#"
+            class="btn btn-primary m-1"
+            role="button"
+            rel="nofollow"
+            target="_blank">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a
+            href="#"
+            class="btn btn-primary m-1"
+            role="button"
+            rel="nofollow"
+            target="_blank">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a
+            href="#"
+            class="btn btn-primary m-1"
+            role="button"
+            rel="nofollow"
+            target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
 
-          <div class="text-center py-4 align-items-center">
-            <p>Follow us on social media</p>
-            <a
-              href="#"
-              class="btn btn-primary m-1"
-              role="button"
-              rel="nofollow"
-              target="_blank">
-              <i class="fab fa-youtube"></i>
-            </a>
-            <a
-              href="#"
-              class="btn btn-primary m-1"
-              role="button"
-              rel="nofollow"
-              target="_blank">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a
-              href="#"
-              class="btn btn-primary m-1"
-              role="button"
-              rel="nofollow"
-              target="_blank">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a
-              href="#"
-              class="btn btn-primary m-1"
-              role="button"
-              rel="nofollow"
-              target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-          </div>
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0,
+          0.2);">
+          This website is distributed by the Office of the Nagorno Karabakh
+          Republic in Armenia on behalf of the Government of the Nagorno
+          Karabakh Republic.
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!--Footer-->
 
-          <!-- Copyright -->
-          <div class="text-center p-3" style="background-color: rgba(0, 0, 0,
-            0.2);">
-            This website is distributed by the Office of the Nagorno Karabakh
-            Republic in Armenia on behalf of the Government of the Nagorno
-            Karabakh Republic.
-          </div>
-          <!-- Copyright -->
-        </footer>
-        <!--Footer-->
-        <!-- MDB -->
-        <script type="text/javascript" src="assets/js/mdb/mdb.min.js"></script>
-        <!-- Custom scripts -->
-        <script type="text/javascript" src="js/script.js"></script>
-      </body>
-    </html>
+      <script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+      <!-- MDB -->
+      <script type="text/javascript" src="assets/js/mdb/mdb.min.js"></script>
+      <!-- Custom scripts -->
+      <script type="text/javascript" src="assets/js/script.js"></script>
+
+
+    </body>
+  </html>
